@@ -1,9 +1,9 @@
 # HotSpot Patch Roadmap
 
-Last updated: 2026-05-18 00:05 CEST
+Last updated: 2026-05-18 00:13 CEST
 
 This directory holds patch notes and exported patches for the HotSpot
-ordinary-object Rift backend. Patch 1-11 are now exported. Patch 4 is a narrow
+ordinary-object Rift backend. Patch 1-12 are now exported. Patch 4 is a narrow
 interpreter-only object-allocation prototype; Patch 5 adds the first
 interpreter store guard; Patch 6 extends store checks to Unsafe/JNI paths used
 by reflection; Patch 7 adds an explicit live-object verifier for API-boundary
@@ -11,7 +11,8 @@ stale-use checks; Patch 8 adds a conservative C1 allocation route for eligible
 `new` bytecodes; Patch 9 adds conservative C1 compiled store guards; Patch 10
 gates unsupported C2/JVMCI compilation while Rift regions are enabled; Patch
 11 adds a first Serial GC root-handling prototype for live primitive-field
-region objects. This is still not a complete safe JVM Rift backend.
+region objects; Patch 12 rejects unsupported collector/header configurations
+up front. This is still not a complete safe JVM Rift backend.
 
 ## Patch 0: Build Baseline
 
@@ -375,3 +376,46 @@ Implementation note:
   arrays, does not support compressed oops, and does not make other collectors
   aware of region memory. It proves the first active-region root handling path,
   not broad JVM GC integration.
+
+## Patch 12: VM Configuration Gate
+
+Patch file:
+
+`10-vm-config-gate.patch`
+
+Implemented:
+
+- the Rift runtime entrypoints now reject unsupported VM configurations while
+  `-XX:+UseRiftRegions` is enabled;
+- the prototype currently requires `-XX:+UseSerialGC`,
+  `-XX:-UseCompressedOops`, and `-XX:-UseCompactObjectHeaders`;
+- added `RiftHotSpotConfigGateSmoke` and `run_config_gate_smoke.sh`, which
+  run with the default unsupported collector/header settings and expect a
+  clean `UnsupportedOperationException` instead of a later VM crash.
+
+Validation:
+
+- patched fastdebug OpenJDK image builds;
+- configuration-gate smoke passes at
+  `/private/tmp/rift-hotspot-config-gate-smoke-patch12-20260518` with
+  `config-gate-ok`;
+- region lifecycle smoke still passes at
+  `/private/tmp/rift-hotspot-region-smoke-patch12-20260518`;
+- safepoint/GC probe still passes at
+  `/private/tmp/rift-hotspot-safepoint-probe-patch12-20260518`;
+- C2-gate smoke still passes at
+  `/private/tmp/rift-hotspot-c2-gate-smoke-patch12-20260518`;
+- C1 store-guard smoke still passes at
+  `/private/tmp/rift-hotspot-c1-store-guard-smoke-patch12-20260518`;
+- C1 allocation smoke still passes at
+  `/private/tmp/rift-hotspot-c1-region-smoke-patch12-20260518`;
+- interpreter object-region smoke still passes at
+  `/private/tmp/rift-hotspot-object-region-smoke-patch12-20260518`;
+- flag-off baseline smoke still passes at
+  `/private/tmp/rift-hotspot-smoke-patch12-20260518`.
+
+Implementation note:
+
+- Patch 12 does not broaden collector support. It narrows the accepted runtime
+  configuration to match the implementation that is actually covered by Patch
+  11.
